fix success sign up on mobile

--- a/src/components/business/RegisterSection/RegisterSection.module.scss
+++ b/src/components/business/RegisterSection/RegisterSection.module.scss
@@ -58,4 +58,11 @@
 
 .imgWrapper {
   text-align: center;
+
+  @media (max-width: 330px) {
+    img {
+      width: 100%;
+      object-fit: cover;
+    }
+  }
 }
